[package]
name = "tcxa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
clap_derive = "4.0.21"
quick-xml = { version = "0.27.1", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_derive = "1.0.152"
